--- a/charts/vela-core/templates/defwithtemplate/multi-env.yaml
+++ b/charts/vela-core/templates/defwithtemplate/multi-env.yaml
@@ -15,16 +15,14 @@ spec:
         	"vela/op"
         )
 
-        component: op.#ApplyEnvBindComponent & {
-        	env:       parameter.env
-        	policy:    parameter.policy
-        	component: parameter.component
+        app: op.#ApplyEnvBindApp & {
+        	env:    parameter.env
+        	policy: parameter.policy
+        	app:    context.name
         	// context.namespace indicates the namespace of the app
         	namespace: context.namespace
         }
         parameter: {
-        	// +usage=Declare the name of the component
-        	component: string
         	// +usage=Declare the name of the policy
         	policy: string
         	// +usage=Declare the name of the env in policy
