--- a/charts/vela-core/crds/core.oam.dev_envbindings.yaml
+++ b/charts/vela-core/crds/core.oam.dev_envbindings.yaml
@@ -176,7 +176,7 @@ spec:
           status:
             description: A EnvBindingStatus is the status of EnvBinding
             properties:
-              cluster_decisions:
+              clusterDecisions:
                 items:
                   description: ClusterDecision recorded the mapping of environment
                     and cluster
@@ -228,6 +228,42 @@ spec:
                 description: EnvBindingPhase is a label for the condition of a EnvBinding
                   at the current time
                 type: string
+              resourceTracker:
+                description: ResourceTracker record the status of the ResourceTracker
+                properties:
+                  apiVersion:
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: 'If referring to a piece of an object instead of
+                      an entire object, this string should contain a valid JSON/Go
+                      field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within
+                      a pod, this would take on a value like: "spec.containers{name}"
+                      (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]"
+                      (container with index 2 in this pod). This syntax is chosen
+                      only to have some well-defined way of referencing a part of
+                      an object. TODO: this design is not final and this field is
+                      subject to change in the future.'
+                    type: string
+                  kind:
+                    description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                    type: string
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                  resourceVersion:
+                    description: 'Specific resourceVersion to which this reference
+                      is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                    type: string
+                  uid:
+                    description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                    type: string
+                type: object
             type: object
         type: object
     served: true
