--- a/charts/vela-core/templates/defwithtemplate/lifecycle.yaml
+++ b/charts/vela-core/templates/defwithtemplate/lifecycle.yaml
@@ -4,12 +4,12 @@ apiVersion: core.oam.dev/v1beta1
 kind: TraitDefinition
 metadata:
   annotations:
-    definition.oam.dev/description: Add lifecycle hooks to workloads.
+    definition.oam.dev/description: Add lifecycle hooks for the first container of K8s pod for your workload which follows the pod spec in path 'spec.template'.
   name: lifecycle
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   appliesToWorkloads:
-    - deployments.apps
+    - '*'
   podDisruptive: true
   schematic:
     cue:
