--- a/charts/vela-core/templates/defwithtemplate/volumes.yaml
+++ b/charts/vela-core/templates/defwithtemplate/volumes.yaml
@@ -4,7 +4,7 @@ apiVersion: core.oam.dev/v1beta1
 kind: TraitDefinition
 metadata:
   annotations:
-    definition.oam.dev/description: Add volumes for your Workload.
+    definition.oam.dev/description: Add volumes on K8s pod for your workload which follows the pod spec in path 'spec.template'.
   name: volumes
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
