--- a/charts/vela-core/templates/defwithtemplate/apply-component.yaml
+++ b/charts/vela-core/templates/defwithtemplate/apply-component.yaml
@@ -16,7 +16,7 @@ spec:
         )
 
         // apply components and traits
-        apply: op.#ApplyComponent & {
+        output: op.#ApplyComponent & {
         	component: parameter.component
         }
         parameter: {
