Fix(policy): update env-binding policy

--- a/charts/vela-core/templates/defwithtemplate/env-binding.yaml
+++ b/charts/vela-core/templates/defwithtemplate/env-binding.yaml
@@ -15,7 +15,7 @@ spec:
         	apiVersion: "core.oam.dev/v1alpha1"
         	kind:       "EnvBinding"
         	spec: {
-        		engine: parameter.engine
+        		engine: parameter.clusterManagementEngine
         		appTemplate: {
         			apiVersion: "core.oam.dev/v1beta1"
         			kind:       "Application"
@@ -26,11 +26,9 @@ spec:
         			spec: components: context.components
         		}
         		envs: parameter.envs
-        		if !parameter.created {
-        			outputResourcesTo: {
-        				name:      context.name
-        				namespace: context.namespace
-        			}
+        		outputResourcesTo: {
+        			name:      context.name
+        			namespace: context.namespace
         		}
         	}
         }
@@ -57,8 +55,7 @@ spec:
         	}
         }
         parameter: {
-        	engine: *"ocm" | string
+        	clusterManagementEngine: *"ocm" | string
         	envs: [...#Env]
-        	created: *true | bool
         }
 
