--- a/test/e2e-test/testdata/app/app_healthscope.yaml
+++ b/test/e2e-test/testdata/app/app_healthscope.yaml
@@ -4,7 +4,7 @@ metadata:
   name: app-healthscope
 spec:
   components:
-    - name: my-server
+    - name: my-server-1
       type: webservice
       properties:
         cmd:
@@ -18,3 +18,36 @@ spec:
             domain: test.my.domain
             http:
               "/": 8080
+    - name: my-server-2
+      type: webservice
+      properties:
+        cmd:
+          - node
+          - server.js
+        image: oamdev/testapp:v1
+        port: 8080
+      traits:
+        - type: ingress
+          properties:
+            domain: test.my.domain
+            http:
+              "/": 8080
+  policies:
+    - name: app-healthscope
+      type: health-scope-binding
+      properties:
+        probeInterval: 5
+        boundComponents:
+          - my-server-1
+          - my-server-2
+          - boom # invalid component name will be omitted
+  workflow:
+    steps:
+      - name: apply-my-server-1
+        type: apply-component
+        properties:
+          component: my-server-1
+      - name: apply-my-server-2
+        type: apply-component
+        properties:
+          component: my-server-2
