--- a/test/e2e-test/testdata/app/app_healthscope_unhealthy.yaml
+++ b/test/e2e-test/testdata/app/app_healthscope_unhealthy.yaml
@@ -12,3 +12,36 @@ spec:
           - server.js
         image: oamdev/testapp:boom # make it unhealthy
         port: 8080
+    - name: my-server
+      type: webservice
+      properties:
+        cmd:
+          - node
+          - server.js
+        image: oamdev/testapp:v1
+        port: 8080
+      traits:
+        - type: ingress
+          properties:
+            domain: test.my.domain
+            http:
+              "/": 8080
+  policies:
+    - name: app-healthscope-unhealthy
+      type: health-scope-binding
+      properties:
+        probeInterval: 5
+        boundComponents:
+          - my-server-unhealthy
+          - my-server
+          - boom # invalid component name will be omitted
+  workflow:
+    steps:
+      - name: apply-my-server-unhealthy
+        type: apply-component
+        properties:
+          component: my-server-unhealthy
+      - name: apply-my-server
+        type: apply-component
+        properties:
+          component: my-server
