--- a/charts/vela-core/templates/defwithtemplate/service-binding.yaml
+++ b/charts/vela-core/templates/defwithtemplate/service-binding.yaml
@@ -36,6 +36,10 @@ spec:
         }
         parameter: {
         	// +usage=The mapping of environment variables to secret
-        	envMappings: [string]: [string]: string
+        	envMappings: [string]: #KeySecret
+        }
+        #KeySecret: {
+        	key?:   string
+        	secret: string
         }
 
