--- a/charts/vela-core/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/charts/vela-core/crds/core.oam.dev_containerizedworkloads.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.4
+    controller-gen.kubebuilder.io/version: v0.6.2
   name: containerizedworkloads.core.oam.dev
 spec:
   group: core.oam.dev
@@ -354,9 +354,13 @@ spec:
                           description: CPU required by this container.
                           properties:
                             required:
+                              anyOf:
+                              - type: integer
+                              - type: string
                               description: Required CPU count. 1.0 represents one
                                 CPU core.
-                              type: string
+                              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                              x-kubernetes-int-or-string: true
                           required:
                           - required
                           type: object
@@ -386,8 +390,12 @@ spec:
                           description: GPU required by this container.
                           properties:
                             required:
+                              anyOf:
+                              - type: integer
+                              - type: string
                               description: Required GPU count.
-                              type: string
+                              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                              x-kubernetes-int-or-string: true
                           required:
                           - required
                           type: object
@@ -395,8 +403,12 @@ spec:
                           description: Memory required by this container.
                           properties:
                             required:
+                              anyOf:
+                              - type: integer
+                              - type: string
                               description: Required memory.
-                              type: string
+                              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                              x-kubernetes-int-or-string: true
                           required:
                           - required
                           type: object
@@ -420,8 +432,12 @@ spec:
                                       disk needs to be mounted.
                                     type: boolean
                                   required:
+                                    anyOf:
+                                    - type: integer
+                                    - type: string
                                     description: Required disk space.
-                                    type: string
+                                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                    x-kubernetes-int-or-string: true
                                 required:
                                 - required
                                 type: object
