--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -1,31 +1,12 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.4
+    controller-gen.kubebuilder.io/version: v0.6.2
   name: applications.core.oam.dev
 spec:
-  additionalPrinterColumns:
-  - JSONPath: .spec.components[*].name
-    name: COMPONENT
-    type: string
-  - JSONPath: .spec.components[*].type
-    name: TYPE
-    type: string
-  - JSONPath: .status.status
-    name: PHASE
-    type: string
-  - JSONPath: .status.services[*].healthy
-    name: HEALTHY
-    type: boolean
-  - JSONPath: .status.services[*].message
-    name: STATUS
-    type: string
-  - JSONPath: .metadata.creationTimestamp
-    name: AGE
-    type: date
   group: core.oam.dev
   names:
     categories:
@@ -37,11 +18,27 @@ spec:
     - app
     singular: application
   scope: Namespaced
-  subresources:
-    status: {}
-  version: v1alpha2
   versions:
-  - name: v1alpha2
+  - additionalPrinterColumns:
+    - jsonPath: .spec.components[*].name
+      name: COMPONENT
+      type: string
+    - jsonPath: .spec.components[*].type
+      name: TYPE
+      type: string
+    - jsonPath: .status.status
+      name: PHASE
+      type: string
+    - jsonPath: .status.services[*].healthy
+      name: HEALTHY
+      type: boolean
+    - jsonPath: .status.services[*].message
+      name: STATUS
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
+    name: v1alpha2
     schema:
       openAPIV3Schema:
         description: Application is the Schema for the applications API
@@ -940,7 +937,28 @@ spec:
         type: object
     served: true
     storage: false
-  - name: v1beta1
+    subresources:
+      status: {}
+  - additionalPrinterColumns:
+    - jsonPath: .spec.components[*].name
+      name: COMPONENT
+      type: string
+    - jsonPath: .spec.components[*].type
+      name: TYPE
+      type: string
+    - jsonPath: .status.status
+      name: PHASE
+      type: string
+    - jsonPath: .status.services[*].healthy
+      name: HEALTHY
+      type: boolean
+    - jsonPath: .status.services[*].message
+      name: STATUS
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
+    name: v1beta1
     schema:
       openAPIV3Schema:
         description: Application is the Schema for the applications API
@@ -1916,6 +1934,8 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
