--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_scopedefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_scopedefinitions.yaml
@@ -1,16 +1,12 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.4
+    controller-gen.kubebuilder.io/version: v0.6.2
   name: scopedefinitions.core.oam.dev
 spec:
-  additionalPrinterColumns:
-  - JSONPath: .spec.definitionRef.name
-    name: DEFINITION-NAME
-    type: string
   group: core.oam.dev
   names:
     categories:
@@ -22,69 +18,133 @@ spec:
     - scope
     singular: scopedefinition
   scope: Namespaced
-  subresources: {}
-  validation:
-    openAPIV3Schema:
-      description: A ScopeDefinition registers a kind of Kubernetes custom resource
-        as a valid OAM scope kind by referencing its CustomResourceDefinition. The
-        CRD is used to validate the schema of the scope when it is embedded in an
-        OAM ApplicationConfiguration.
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          description: A ScopeDefinitionSpec defines the desired state of a ScopeDefinition.
-          properties:
-            allowComponentOverlap:
-              description: AllowComponentOverlap specifies whether an OAM component
-                may exist in multiple instances of this kind of scope.
-              type: boolean
-            definitionRef:
-              description: Reference to the CustomResourceDefinition that defines
-                this scope kind.
-              properties:
-                name:
-                  description: Name of the referenced CustomResourceDefinition.
-                  type: string
-                version:
-                  description: Version indicate which version should be used if CRD
-                    has multiple versions by default it will use the first one if
-                    not specified
-                  type: string
-              required:
-              - name
-              type: object
-            extension:
-              description: Extension is used for extension needs by OAM platform builders
-              type: object
-              
-            workloadRefsPath:
-              description: WorkloadRefsPath indicates if/where a scope accepts workloadRef
-                objects
-              type: string
-          required:
-          - allowComponentOverlap
-          - definitionRef
-          type: object
-      type: object
-  version: v1alpha2
   versions:
-  - name: v1alpha2
+  - additionalPrinterColumns:
+    - jsonPath: .spec.definitionRef.name
+      name: DEFINITION-NAME
+      type: string
+    name: v1alpha2
+    schema:
+      openAPIV3Schema:
+        description: A ScopeDefinition registers a kind of Kubernetes custom resource
+          as a valid OAM scope kind by referencing its CustomResourceDefinition. The
+          CRD is used to validate the schema of the scope when it is embedded in an
+          OAM ApplicationConfiguration.
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: A ScopeDefinitionSpec defines the desired state of a ScopeDefinition.
+            properties:
+              allowComponentOverlap:
+                description: AllowComponentOverlap specifies whether an OAM component
+                  may exist in multiple instances of this kind of scope.
+                type: boolean
+              definitionRef:
+                description: Reference to the CustomResourceDefinition that defines
+                  this scope kind.
+                properties:
+                  name:
+                    description: Name of the referenced CustomResourceDefinition.
+                    type: string
+                  version:
+                    description: Version indicate which version should be used if
+                      CRD has multiple versions by default it will use the first one
+                      if not specified
+                    type: string
+                required:
+                - name
+                type: object
+              extension:
+                description: Extension is used for extension needs by OAM platform
+                  builders
+                type: object
+                
+              workloadRefsPath:
+                description: WorkloadRefsPath indicates if/where a scope accepts workloadRef
+                  objects
+                type: string
+            required:
+            - allowComponentOverlap
+            - definitionRef
+            type: object
+        type: object
     served: true
     storage: false
-  - name: v1beta1
+    subresources: {}
+  - additionalPrinterColumns:
+    - jsonPath: .spec.definitionRef.name
+      name: DEFINITION-NAME
+      type: string
+    name: v1beta1
+    schema:
+      openAPIV3Schema:
+        description: A ScopeDefinition registers a kind of Kubernetes custom resource
+          as a valid OAM scope kind by referencing its CustomResourceDefinition. The
+          CRD is used to validate the schema of the scope when it is embedded in an
+          OAM ApplicationConfiguration.
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: A ScopeDefinitionSpec defines the desired state of a ScopeDefinition.
+            properties:
+              allowComponentOverlap:
+                description: AllowComponentOverlap specifies whether an OAM component
+                  may exist in multiple instances of this kind of scope.
+                type: boolean
+              definitionRef:
+                description: Reference to the CustomResourceDefinition that defines
+                  this scope kind.
+                properties:
+                  name:
+                    description: Name of the referenced CustomResourceDefinition.
+                    type: string
+                  version:
+                    description: Version indicate which version should be used if
+                      CRD has multiple versions by default it will use the first one
+                      if not specified
+                    type: string
+                required:
+                - name
+                type: object
+              extension:
+                description: Extension is used for extension needs by OAM platform
+                  builders
+                type: object
+                
+              workloadRefsPath:
+                description: WorkloadRefsPath indicates if/where a scope accepts workloadRef
+                  objects
+                type: string
+            required:
+            - allowComponentOverlap
+            - definitionRef
+            type: object
+        type: object
     served: true
     storage: true
+    subresources: {}
 status:
   acceptedNames:
     kind: ""
