--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
@@ -1,19 +1,12 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.4
+    controller-gen.kubebuilder.io/version: v0.6.2
   name: traitdefinitions.core.oam.dev
 spec:
-  additionalPrinterColumns:
-  - JSONPath: .spec.appliesToWorkloads
-    name: APPLIES-TO
-    type: string
-  - JSONPath: .metadata.annotations.definition\.oam\.dev/description
-    name: DESCRIPTION
-    type: string
   group: core.oam.dev
   names:
     categories:
@@ -25,11 +18,15 @@ spec:
     - trait
     singular: traitdefinition
   scope: Namespaced
-  subresources:
-    status: {}
-  version: v1alpha2
   versions:
-  - name: v1alpha2
+  - additionalPrinterColumns:
+    - jsonPath: .spec.appliesToWorkloads
+      name: APPLIES-TO
+      type: string
+    - jsonPath: .metadata.annotations.definition\.oam\.dev/description
+      name: DESCRIPTION
+      type: string
+    name: v1alpha2
     schema:
       openAPIV3Schema:
         description: A TraitDefinition registers a kind of Kubernetes custom resource
@@ -281,7 +278,16 @@ spec:
         type: object
     served: true
     storage: false
-  - name: v1beta1
+    subresources:
+      status: {}
+  - additionalPrinterColumns:
+    - jsonPath: .spec.appliesToWorkloads
+      name: APPLIES-TO
+      type: string
+    - jsonPath: .metadata.annotations.definition\.oam\.dev/description
+      name: DESCRIPTION
+      type: string
+    name: v1beta1
     schema:
       openAPIV3Schema:
         description: A TraitDefinition registers a kind of Kubernetes custom resource
@@ -541,6 +547,8 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
