--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_workflows.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_workflows.yaml
@@ -1,10 +1,10 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.4
+    controller-gen.kubebuilder.io/version: v0.6.2
   name: workflows.core.oam.dev
 spec:
   group: core.oam.dev
@@ -18,13 +18,12 @@ spec:
     - workflow
     singular: workflow
   scope: Namespaced
-  version: v1alpha1
   versions:
   - additionalPrinterColumns:
-    - JSONPath: .status.phase
+    - jsonPath: .status.phase
       name: PHASE
       type: string
-    - JSONPath: .metadata.creationTimestamp
+    - jsonPath: .metadata.creationTimestamp
       name: AGE
       type: date
     name: v1alpha1
