--- a/charts/vela-core/templates/addons-default/kruise.yaml
+++ b/charts/vela-core/templates/addons-default/kruise.yaml
@@ -20,7 +20,7 @@ spec:
           values:
             featureGates: PreDownloadImageForInPlaceUpdate=true
         type: helm
-      - name: cloneset-service
+      - name: cloneset
         properties:
           apiVersion: core.oam.dev/v1beta1
           kind: ComponentDefinition
@@ -30,7 +30,7 @@ spec:
                 services that have a stable network endpoint to receive external network
                 traffic from customers. If workload type is skipped for any service
                 defined in Appfile, it will be defaulted to `webservice` type.
-            name: cloneset-service
+            name: cloneset
             namespace: vela-system
           spec:
             schematic:
