Refactor: remove insert secret and configmap

--- a/references/appfile/dryrun/testdata/dryrun-exp-comp.yaml
+++ b/references/appfile/dryrun/testdata/dryrun-exp-comp.yaml
@@ -1,5 +1,4 @@
 ExternalRevision: ""
-InsertConfigNotReady: false
 Name: myweb
 Namespace: default
 PackagedTraitResources: null
@@ -11,11 +10,13 @@ StandardWorkload:
   apiVersion: apps/v1
   kind: Deployment
   metadata:
+    annotations: {}
     labels:
       app.oam.dev/appRevision: ""
       app.oam.dev/component: myweb
       app.oam.dev/name: app-dryrun
       workload.oam.dev/type: myworker
+      app.oam.dev/resourceType: WORKLOAD
     name: myweb
     namespace: default
   spec:
@@ -37,12 +38,14 @@ Traits:
 - apiVersion: v1
   kind: Service
   metadata:
+    annotations: {}
     labels:
       app.oam.dev/appRevision: ""
       app.oam.dev/component: myweb
       app.oam.dev/name: app-dryrun
       trait.oam.dev/resource: service
       trait.oam.dev/type: myingress
+      app.oam.dev/resourceType: TRAIT
     name: myweb
     namespace: default
   spec:
@@ -54,12 +57,14 @@ Traits:
 - apiVersion: networking.k8s.io/v1beta1
   kind: Ingress
   metadata:
+    annotations: {}
     labels:
       app.oam.dev/appRevision: ""
       app.oam.dev/component: myweb
       app.oam.dev/name: app-dryrun
       trait.oam.dev/resource: ingress
       trait.oam.dev/type: myingress
+      app.oam.dev/resourceType: TRAIT
     name: myweb
     namespace: default
   spec:
